...
    <item
        android:id="@+id/chatItem"
        android:title="Chat"
        android:orderInCategory="1"
        android:icon="@drawable/chat" />
    <item
        android:id="@+id/homeItem"
        android:title="Home"
        android:orderInCategory="2"
        android:icon="@drawable/home" />
    <item
        android:id="@+id/profileItem"
        android:title="Profile"
        android:orderInCategory="3"
...
